# airflow-mcp-iap

./: .env.example  .gitignore  CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  README.md.old  SETUP.md  find-iap-client-id.sh  pyproject.toml  setup_oauth_client.sh  test-iap-connection.sh
src/airflow_mcp_iap/: __init__.py  airflow_http_client.py  airflow_tools.py  iap_auth.py  server.py
